	The class SimpleMatrix owns a internal NumericsMatrix thats is used for
	linear system solving, based on Siconos/Numerics
	* [numerics] add balancing matrice framework
	* [numerics] add freezing contacts in Gauss seidel solvers
	* [externals] add LDL support
	* [mechanics] modify broadphase for Bullet
	* [numerics] render the truncation in NM_entry
	

--------------------------------------------------------------------------------
  v4.3.x
--------------------------------------------------------------------------------
Main changes:
	[...]

	Remove examples from siconos repository : moved to a dedicated repo
	(https://gricad-gitlab.univ-grenoble-alpes.fr/nonsmooth/siconos-tutorials)

	* [kernel, mechanics] implement 2D rigid bodies with Bullet contact detection.

	* [numerics, kernel, mechanics] add rolling friction in 2D and 3D

	* [numerics] add gfc3d_ipm
	First implementation of Interior Point Method for GlobalFrictionalContact Problem

	* [kernel] add SPARSE_COORDINATE type of matrices

	* [numerics] add Cholesky and LDLT factorization

	* [io] add raw_export from hdf5 fot plotting (gnuplot, for instance )
	add edge rendering in vview

	* [kernel] add SecondOrderDS as a superclass for mechanical systems
	LagrangianDS, NewtonEulerDS)

	* [numerics] rework the test framework for the numerics solvers


--------------------------------------------------------------------------------
  v4.2.x
--------------------------------------------------------------------------------
Main changes:
	[...]

	* [kernel] remove Model class


	* [kernel,mechanics,control,io] new API for the initilaization of simulation.
	It is no longer mandatory to call for simulation initialize before running
	a simulation. Warning: this modification is quit deep and changes a lot the
	internal implementation of initialization of objects

	* [kernel] add _relationMatrices and _relationVectors in Interaction
	The objective is to be able to use modeling classes without resorting to