@@ -33,12 +33,21 @@ Check :ref:`siconos_examples` manual for an overview of the various problems han
 Try it
 ------
 
-The easiest way to start with Siconos : try tutorial notebooks available here :
+You can use one of the end-user docker images available in `siconos-tutorials registry <https://gricad-gitlab.univ-grenoble-alpes.fr/nonsmooth/siconos-tutorials/container_registry>`_ .
+
+For example, start a jupyter container including siconos, all running examples and some tutorials notebooks,
+```
+docker run -p 8888:8888 -ti gricad-registry.univ-grenoble-alpes.fr/nonsmooth/siconos-tutorials/siconoslab-release-4.4
+# Then, access in your browser at http://localhost:8888
+# and start siconos-notebooks/index.ipynb
+```
+
+Another possible (but unstable) way to start with Siconos, try the tutorial notebooks available here :
 
 .. image:: https://mybinder.org/badge.svg
    :target: https://mybinder.org/v2/git/https%3A%2F%2Fgricad-gitlab.univ-grenoble-alpes.fr%2Fnonsmooth%2Fsiconos-tutorial.git/b08a0514b22b3927b58bddce3c4018f27ac0fc7d?filepath=siconos-notebooks%2Findex.ipynb
 
-This page propose a Python interactive interface (notebooks) to Siconos, that you can use through your web browser, online.
+This page proposes a Python interactive interface (notebooks) to Siconos, that you can use through your web browser, online.
 
 
 Siconos usage in a few steps
